--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,7 @@ html{
 	padding: 8px 10px 10px 10px;
 	width: 100vw;
 	position: fixed!important;
+	z-index:20000;
 }
 #logo{
 	margin-left: 20px;
@@ -73,6 +74,7 @@ html{
 	width: 100%;
 	margin: 0px -10px -10px -10px;
 	padding-top: 28px;
+	
 }
 .banner{
 	width: 100vw;
@@ -94,4 +96,15 @@ html{
 	left: 20%;
 	right: 20%;
 	transform: translateY(40vh);
+}
+.content{
+	background-color: white;
+	position: relative;
+	width: 100vw;
+	margin-top: calc(100vh - 28px);
+	box-shadow: 0px 4px 11px 0px rgba(0,0,0,0.75);
+	-webkit-box-shadow: 0px 4px 11px 0px rgba(0,0,0,0.75);
+	-moz-box-shadow: 0px 4px 11px 0px rgba(0,0,0,0.75);
+	
+	padding-bottom: 500px;
 }
