--- a/styles.css
+++ b/styles.css
@@ -108,3 +108,9 @@ html{
 	
 	padding-bottom: 500px;
 }
+@media only screen and (min-width: 600px){
+	.info-image{
+		width: 70vw;
+		height: 700px;
+	}
+}
