--- a/styles.css
+++ b/styles.css
@@ -6,29 +6,30 @@
 #FFCB9A - Peach
 #D1E8E2 - Light Blue
 */
-html{
+html {
 	overflow-x: hidden;
+	background-color: black;
 }
 /*navigation*/
 
-.navbar{
+.navbar {
 	background-color: #e0e0e0;
 	margin: -10px;
 	padding: 8px 10px 10px 10px;
 	width: 100vw;
 	position: fixed!important;
 }
-#logo{
+#logo {
 	margin-left: 20px;
 }
-.menu-items{
+.menu-items {
 	float: right;
 	margin: auto;
 	position: relative;
 	height: 20px!important;
 	margin-right: 40px;
 }
-.menu-item{
+.menu-item {
 	font-family: 'Source Sans Pro', sans-serif;
 	font-weight: bold;
 	font-size: 18px;
@@ -45,7 +46,7 @@ html{
 	backface-visibility: hidden;
 	-moz-osx-font-smoothing: grayscale;
 }
-.menu-item:before{
+.menu-item:before {
     content: "";
     position: absolute;
 	z-index: -1;
@@ -54,44 +55,44 @@ html{
     left: 0;
     right: 0;
 	background: #aaa;
-    -webkit-transform: scaleX(0);
-    transform: scaleX(0);
+    -webkit-transform: scaleY(0);
+    transform: scaleY(0);
     -webkit-transform-origin: 50%;
     transform-origin: 50%;
     -webkit-transition-property: transform;
     transition-property: transform;
     -webkit-transition: 300ms ease-out;
     transition: 300ms ease-out;
+	border-radius: 5px;
 }
-.menu-item:hover:before{
-    -webkit-transform: scaleX(1);
-    transform: scaleX(1);
-	border-radius: 5px!important;
+.menu-item:hover:before {
+    -webkit-transform: scaleY(1);
+    transform: scaleY(1);
 }
 /*Main Site*/
-.main-site{
+.main-site {
 	width: 100%;
 	margin: 0px -10px -10px -10px;
 	padding-top: 28px;
 }
-.banner{
+.banner {
 	width: 100vw;
 	height: calc(100vh - 28px);
-	background-image: url(https://hatrabbits.com/wp-content/uploads/2017/01/random.jpg);
+	background-color: #000;
 	position: fixed;
 }
-.title{
-	position: relative;
+.title {
 	display: block;
-	text-shadow: 2px 4px 5px #000000;
+	text-shadow: 3px 4px 6px #000000;
 	font-family: 'Source Sans Pro', sans-serif;
 	text-align:center;
-	white-space: pre;
-	content:"Star Seeker";
-	font-size: 80px;
+	width: 100%;
+	white-space: nowrap;
+	content: "Star Seeker";
+	font-size: 16vmin;
+	font-weight: 900;
 	color: white;
 	position: absolute;
-	left: 20%;
-	right: 20%;
+	margin: auto;
 	transform: translateY(40vh);
 }
