--- a/styles.css
+++ b/styles.css
@@ -79,7 +79,9 @@ html{
 .banner{
 	width: 100vw;
 	height: calc(100vh - 28px);
-	background-image: url(https://hatrabbits.com/wp-content/uploads/2017/01/random.jpg);
+	background-image: url(https://cdn.pocket-lint.com/r/s/1200x/assets/images/142413-apps-feature-art-and-science-collide-the-best-in-modern-space-art-image1-iha6vzu3wk.jpg);
+	background-repeat:none;
+	background-size: 100vw;
 	position: fixed;
 }
 .title{
@@ -90,11 +92,11 @@ html{
 	text-align:center;
 	white-space: pre;
 	content:"Star Seeker";
-	font-size: 80px;
+	font-size: 50px;
 	color: white;
 	position: absolute;
-	left: 20%;
-	right: 20%;
+	left: 0%;
+	right: 0%;
 	transform: translateY(40vh);
 }
 .content{
@@ -105,12 +107,49 @@ html{
 	box-shadow: 0px 4px 11px 0px rgba(0,0,0,0.75);
 	-webkit-box-shadow: 0px 4px 11px 0px rgba(0,0,0,0.75);
 	-moz-box-shadow: 0px 4px 11px 0px rgba(0,0,0,0.75);
+	padding-bottom: 1000px;
+}
+.section{
+	position: relative;
+	margin-bottom: 500px!important;
+}
+.info-text > p{
+	padding: 0px 40px;
+	font-family: 'Source Sans Pro', sans-serif;
+	font-size: 20px;
 	
-	padding-bottom: 500px;
+}
+.info-text > h1{
+	font-family: 'Source Sans Pro', sans-serif;
+	font-size: 42px;
+	text-align:center;
+}
+.info-text{
+	width: 100vw;
+}
+.info-image{
+	width: 100vw;
+	max-height: 250px;
+}
+.info-left{
+	float: left;
+}
+.info-right{
+	float: right;
 }
 @media only screen and (min-width: 600px){
+	.title{
+		font-size: 80px;
+	}
 	.info-image{
-		width: 70vw;
-		height: 700px;
+		width: 65vw;
+		height: 450px;
+		max-height: 450px;
+	}
+	.info-text{
+		background-color: #e0e0e0;
+		width: 35vw;
+		height: 450px;
+		max-height: 450px;
 	}
 }
