--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ html, body {
 	background-color: #e0e0e0;
 	/* margin: -10px; */
 	/* padding: 8px 10px 10px 10px; */
-	width: 100vw;
+	width: 100%;
 	position: fixed!important;
 	top: 0;
 	left: 0;
