--- a/styles.css
+++ b/styles.css
@@ -330,3 +330,15 @@ a {
 	border: none;
 	cursor: pointer;
 }
+.centered-popout{
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	-ms-transform: translate(-50%, -50%);
+	transform: translate(-50%, -50%);
+	padding: 20px;
+	box-shadow: 0px 0px 8px 4px rgba(0,0,0,0.75);
+	-webkit-box-shadow: 0px 0px 8px 4px rgba(0,0,0,0.75);
+	-moz-box-shadow: 0px 0px 8px 4px rgba(0,0,0,0.75);
+	border-radius: 12px;
+}
