--- a/styles.css
+++ b/styles.css
@@ -88,6 +88,12 @@ html, body {
 	padding-top: 36px;
 	font-family: 'Source Sans Pro', sans-serif;
 }
+.wrapper-register{
+	width: 100vw;
+	/* margin: 0px -10px -10px -10px; */
+	padding-top: 0px;
+	font-family: 'Source Sans Pro', sans-serif;
+}
 .banner{
 	width: 100vw;
 	height: calc(100vh - 28px);
@@ -341,4 +347,13 @@ a {
 	-webkit-box-shadow: 0px 0px 8px 4px rgba(0,0,0,0.75);
 	-moz-box-shadow: 0px 0px 8px 4px rgba(0,0,0,0.75);
 	border-radius: 12px;
+	background-color: rgb(255,255,255, .88)
+}
+.background-image{
+	min-height: 100vh;
+	max-width: 100vw;
+}
+.background{
+	height: 100vh;
+	overflow: hidden;
 }
