--- a/style.css
+++ b/style.css
@@ -347,7 +347,8 @@ a {
 	-webkit-box-shadow: 0px 0px 8px 4px rgba(0,0,0,0.75);
 	-moz-box-shadow: 0px 0px 8px 4px rgba(0,0,0,0.75);
 	border-radius: 12px;
-	background-color: rgb(255,255,255, .88)
+	background-color: rgb(255,255,255, .88);
+	min-width: 280px;
 }
 .background-image{
 	min-height: 100vh;
@@ -356,4 +357,9 @@ a {
 .background{
 	height: 100vh;
 	overflow: hidden;
+}
+@media only screen and (max-width: 599px){
+	.button{
+		margin-bottom: 30px;
+	}
 }
